counter, headline, particle

--- a/L5/index.html
+++ b/L5/index.html
@@ -9,6 +9,9 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <title>Document</title>
     <style>
+        body{
+            background-color: black;
+        }
         .center{
             margin: 20px;
             width: 600px;
@@ -18,9 +21,7 @@
             border: 1px solid #cb1919;
             margin: 10px;
           }
-          .slick-prev,.slick-next{
-            background-color: red;
-          }
+          
           img{
             height: 100%;
             width: 100%;
@@ -48,7 +49,6 @@
         <div class="box">
             <img src="https://cdn.pixabay.com/photo/2024/04/08/14/09/nature-8683570_640.jpg" alt=""/>
         </div>
-        
       </div>
  
 
