--- a/Admin Panel/index.html
+++ b/Admin Panel/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
     
-    <div id="main">
+    <!-- <div id="main">
         <div id="sidebar">
-            <button for="#dashboard">Dashboard</button>
+            <button style="border: none; padding: 10px;" for="#dashboard">
+                <i class="fa-solid fa-house"></i>
+                <span>Dashboard</span>
+            </button>
             <button for="#about">About</button>
             <button for="#chart">Chart</button>
         </div>
         <div id="content">
-            <div id="dashboard">
+            <div  id="dashboard">
                 <h1>Dashboard</h1>
+               <div>im</div>
             </div>
             <div id="about">
                 <h1>About</h1>
@@ -25,11 +30,24 @@
                 <h1>Chart</h1>
             </div>
         </div>
+    </div> -->
+
+
+
+    <!-- <div style="height: 300px; width: 300px;">
+        <canvas  id="myChart"></canvas>
+    </div> -->
+
+
+    <div  id="Chart">
     </div>
 
 
 
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="./script.js"></script>
 </body>
 </html>
